--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" src="./lib/extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="./lib/extras/modernizr.2.5.3.min.js"></script>
+<script type="text/javascript" src="./lib/turn.min.js"></script>
 </head>
 <body>
 <div id="flipbook">
