--- a/basic/index.html
+++ b/basic/index.html
@@ -73,8 +73,7 @@ yepnope({
 
 </script>
 
-<script type="text/javascript" src=“./js/basic.js">
-</script>
+<script type="text/javascript" src="./js/basic.js"></script>
 
 </body>
 </html>
