--- a/basic/index.html
+++ b/basic/index.html
@@ -11,10 +11,34 @@
 <!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
 <body>
 
+	<link rel="stylesheet" src="./css/basic.css">
+	
+	<style>
+a:active {
+  color:white;
+}
+a:visited {
+  color:white;
+}
+
+h2 {
+  text-align: center;
+}
+
+@font-face {
+  font-family: 'Ok';
+  src: local(".fonts/ok.otf") format('otf');
+}
+
+</style>
+  <h2><a style="text-decoration:none" href="https://TheJaguardian.org">Return to The Jaguardian</a></h2>
+
+
+
 <div class="flipbook-viewport">
 	<div class="container">
 		<div class="flipbook">
-			<div style="background-image:url(pages/1.jpg)">&nbsp;</div>
+			<div style="background-image:url(pages/1.jpg)"></div>
 			<div style="background-image:url(pages/2.jpg)"></div>
 			<div style="background-image:url(pages/3.jpg)"></div>
 			<div style="background-image:url(pages/4.jpg)"></div>
