--- a/basic/index.html
+++ b/basic/index.html
@@ -27,7 +27,7 @@ h2 {
 
 @font-face {
   font-family: 'Ok';
-  src: local(".fonts/ok.otf") format('otf');
+  src: local("./fonts/Ok.otf") format('otf');
 }
 
 </style>
