--- a/basic/index.html
+++ b/basic/index.html
@@ -9,6 +9,27 @@
 <script type="text/javascript" src="../lib/extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../lib/extras/modernizr.2.5.3.min.js"></script>
 <!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
+
+<style type ="text/css" >
+
+@font-face {
+  font-family: 'Alegreya Sans';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/alegreyasans/v13/5aUo9_-1phKLFgshYDvh6Vwt7V9VBEhGiU9GmRGyBQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+   .footer{ 
+       position: fixed;     
+       text-align: center;    
+       bottom: 20px; 
+       width: 100%;
+       color:white
+   }  
+</style>
+
 <body>
 
 	<link rel="stylesheet" src="./css/basic.css">
@@ -28,6 +49,17 @@ h2 {
 @font-face {
   font-family: 'Ok';
   src: local("./fonts/Ok.otf") format('otf');
+}
+
+#flipbook .hard {
+  background: #ccc !important;
+  color: #333;
+  -webkit-box-shadow: inset 0 0 5px #666;
+  -moz-box-shadow: inset 0 0 5px #666;
+  -o-box-shadow: inset 0 0 5px #666;
+  -ms-box-shadow: inset 0 0 5px #666;
+  box-shadow: inset 0 0 5px #666;
+  font-weight: bold;
 }
 
 </style>
@@ -98,6 +130,10 @@ yepnope({
 </script>
 
 <script type="text/javascript" src="./js/basic.js"></script>
+
+<div class="footer">
+<h4><a style="text-decoration:none" href="https://TheJaguardian.org">Jagazine Archives</a></h4>
+</div>
 
 </body>
 </html>
