--- a/index.html
+++ b/index.html
@@ -1,26 +1,253 @@
-<html>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]> <html lang="en" class="ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-<script type="text/javascript" src="./lib/extras/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="./lib/extras/modernizr.2.5.3.min.js"></script>
-<script type="text/javascript" src="./lib/turn.min.js"></script>
-</head>
-<body>
-<div id="flipbook">
-	<div class="hard"> Turn.js </div>
-	<div class="hard"></div>
-	<div> Page 1 </div>
-	<div> Page 2 </div>
-	<div> Page 3 </div>
-	<div> Page 4 </div>
-	<div class="hard"></div>
-	<div class="hard"></div>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script type="text/javascript" src="../lib/extras/jquery.min.1.7.js"></script>
+<script type="text/javascript" src="../lib/extras/modernizr.2.5.3.min.js"></script>
+<link rel="stylesheet" src="https://use.typekit.net/dwd3cvg.css">
+<!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> -->
+
+<style>
+
+   .footer{
+       text-align: center;   
+       bottom: 20px;
+       width: 100%;
+       color:white
+   } 
+
+   /* Basic sample */
+
+body{
+        overflow:hidden;
+        background-color:#000000;
+        margin:0;
+        padding:0;
+
+}
+
+.flipbook-viewport{
+        overflow:hidden;
+        width:50%;
+        height:50%;
+}
+
+.flipbook-viewport .container{
+        position:absolute;
+        left:50%;
+        margin:auto;
+}
+
+.flipbook-viewport .flipbook{
+        width:922px;
+        height:600px;
+        left:-461px;
+        top:-300px;
+}
+
+.flipbook-viewport .page{
+        width:461px;
+        height:600px;
+        background-color:white;
+        background-repeat:no-repeat;
+        background-size:100% 100%;
+}
+
+.flipbook .page{
+        -webkit-box-shadow:0 0 10px rgba(0,0,0,0.2);
+        -moz-box-shadow:0 0 10px rgba(0,0,0,0.2);
+        -ms-box-shadow:0 0 10px rgba(0,0,0,0.2);
+        -o-box-shadow:0 0 10px rgba(0,0,0,0.2);
+        box-shadow:0 0 10px rgba(0,0,0,0.2);
+
+}       
+
+#flipbook .hard{
+    background:#ccc !important;
+    color:#333;
+    -webkit-box-shadow:inset 0 0 10px #666;
+    -moz-box-shadow:inset 0 0 10px #666;
+    -o-box-shadow:inset 0 0 10px #666;
+    -ms-box-shadow:inset 0 0 10px #666;
+    box-shadow:inset 0 0 10px #666;
+    font-weight:bold;
+}
+
+.flipbook-viewport .page img{
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        margin:0;
+
+}
+
+.flipbook-viewport .shadow{
+        -webkit-transition: -webkit-box-shadow 0.5s;
+        -moz-transition: -moz-box-shadow 0.5s;
+        -o-transition: -webkit-box-shadow 0.5s;
+        -ms-transition: -ms-box-shadow 0.5s;
+
+        -webkit-box-shadow:0 0 10px #ccc;
+        -moz-box-shadow:0 0 10px #ccc;
+        -o-box-shadow:0 0 10px #ccc;
+        -ms-box-shadow:0 0 10px #ccc;
+        box-shadow:0 0 10px #ccc;
+}
+
+@import url("https://p.typekit.net/p.css?s=1&k=dwd3cvg&ht=tk&f=10805.10807.42667&a=54175551&app=typekit&e=css");
+
+@font-face {
+font-family:"nimbus-sans-extended";
+src:url("https://use.typekit.net/af/d9b817/000000000000000077359e22/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),url("https://use.typekit.net/af/d9b817/000000000000000077359e22/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),url("https://use.typekit.net/af/d9b817/000000000000000077359e22/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:700;
+}
+
+@font-face {
+font-family:"nimbus-sans-extended";
+src:url("https://use.typekit.net/af/47228f/000000000000000077359e29/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("woff2"),url("https://use.typekit.net/af/47228f/000000000000000077359e29/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("woff"),url("https://use.typekit.net/af/47228f/000000000000000077359e29/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:900;
+}
+
+@font-face {
+font-family:"ohno-blazeface";
+src:url("https://use.typekit.net/af/d9473d/00000000000000007735ce52/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/d9473d/00000000000000007735ce52/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/d9473d/00000000000000007735ce52/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:500;
+}
+
+.tk-nimbus-sans-extended { font-family: "nimbus-sans-extended",sans-serif; }
+.tk-beastly { font-family: "beastly",sans-serif; }
+.tk-ohno-blazeface { font-family: "ohno-blazeface",sans-serif; }
+
+</style>
+
+<body style = "font-family: nimbus-sans-extended;">
+
+        <link rel="stylesheet" src="./css/basic.css">
+
+        <style>
+a:active {
+  color:white;
+}
+a:visited {
+  color:white;
+}
+
+h2 {
+  text-align: center;
+}
+
+#flipbook .hard {
+  background: #ccc !important;
+  color: #333;
+  -webkit-box-shadow: inset 0 0 5px #666;
+  -moz-box-shadow: inset 0 0 5px #666;
+  -o-box-shadow: inset 0 0 5px #666;
+  -ms-box-shadow: inset 0 0 5px #666;
+  box-shadow: inset 0 0 5px #666;
+  font-weight: bold;
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-right: 10px;
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+
+
+</style>
+<div>
+  <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow left"></i>Return to The Jaguardian</a></h2>
 </div>
+<a style="text-decoration:none; margin-right: 45px; float: right;" href="https://TheJaguardian.org">Jagazine Archives</a>
+
+
+<div style = "padding-top: 20px; padding-bottom: 350px;">
+  <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
+</div>
+
+
+<div class="flipbook-viewport">
+        <div class="container">
+                <div class="flipbook">
+                        <div style="background-image:url(pages/1.jpg)"></div>
+                        <div style="background-image:url(pages/2.jpg)"></div>
+                        <div style="background-image:url(pages/3.jpg)"></div>
+                        <div style="background-image:url(pages/4.jpg)"></div>
+                        <div style="background-image:url(pages/5.jpg)"></div>
+                        <div style="background-image:url(pages/6.jpg)"></div>
+                        <div style="background-image:url(pages/7.jpg)"></div>
+                        <div style="background-image:url(pages/8.jpg)"></div>
+                        <div style="background-image:url(pages/9.jpg)"></div>
+                        <div style="background-image:url(pages/10.jpg)"></div>
+                        <div style="background-image:url(pages/11.jpg)"></div>
+                        <div style="background-image:url(pages/12.jpg)"></div>
+                </div>
+        </div>
+</div>
+
+
+
+
 <script type="text/javascript">
-	$("#flipbook").turn({
-		width: 400,
-		height: 300,
-		autoCenter: true
-	});
+
+function loadApp() {
+
+        // Create the flipbook
+
+        $('.flipbook').turn({
+                        // Width
+
+                        width:922,
+
+                        // Height
+
+                        height:600,
+
+                        // Elevation
+
+                        elevation: 50,
+
+                        // Enable gradients
+
+                        gradients: true,
+
+                        // Auto center this flipbook
+
+                        autoCenter: true
+
+        });
+}
+
+// Load the HTML4 version if there's not CSS transform
+
+yepnope({
+        test : Modernizr.csstransforms,
+        yep: ['../lib/turn.js'],
+        nope: ['../lib/turn.html4.min.js'],
+        both: ['css/basic.css'],
+        complete: loadApp
+});
+
 </script>
+
+<script type="text/javascript" src="js/basic.js"></script>
+
+
+
 </body>
 </html>
