--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ a:visited {
 <div>
   <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow left"></i>Return to The Jaguardian</a></h2>
 </div>
-<a style="text-decoration:none; margin-right: 45px; float: right;" href="https://TheJaguardian.org">Jagazine Archives</a>
+<a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (Not Available Yet)</a>
 
 
 <div style = "padding-top: 20px; padding-bottom: 350px;">
