--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" src="https://use.typekit.net/dwd3cvg.css">
 <!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
 
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">	
+
 <style>
 
    .footer{ 
