--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@ a:visited {
 <div style = "padding-top: 20px; padding-bottom: 350px;">
   <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
 </div>
+	
+<div>
+  <h2><a style="padding-top: 40px; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages</a></h2>
+</div>
 
 
 <div class="flipbook-viewport">
