--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ a:visited {
 </div>
 	
 <div>
-  <h2><a style="padding-top: 40px; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages</a></h2>
+  <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages</a></h2>
 </div>
 
 
