--- a/use/index.html
+++ b/use/index.html
@@ -5,13 +5,6 @@
 <!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="../lib/extras/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="../lib/extras/modernizr.2.5.3.min.js"></script>
-<link rel="stylesheet" src="https://use.typekit.net/dwd3cvg.css">
-<!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
-
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">	
 
 <style>
 
@@ -166,83 +159,16 @@ a:visited {
 <div>
   <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow left"></i>Return to The Jaguardian</a></h2>
 </div>
-<a style="text-decoration:none; margin-right: 45px; float: right;" href="use">Instructions for use (if you're confused)</a>
+<a style="text-decoration:none; margin-right: 45px; float: right;" href="javascript:javascript:history.go(-1)">back to the zine)</a>
 
 
 <div style = "padding-top: 20px; padding-bottom: 350px;">
-  <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
+  <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">click or pinch corners to turn pages, or use the arrow keys</a></center>
 </div>
 	
 <div>
   <h2><a style="padding-top: 40px; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages</a></h2>
 </div>
-
-
-<div class="flipbook-viewport">
-	<div class="container">
-		<div class="flipbook">
-			<div style="background-image:url(pages/1.jpg)"></div>
-			<div style="background-image:url(pages/2.jpg)"></div>
-			<div style="background-image:url(pages/3.jpg)"></div>
-			<div style="background-image:url(pages/4.jpg)"></div>
-			<div style="background-image:url(pages/5.jpg)"></div>
-			<div style="background-image:url(pages/6.jpg)"></div>
-			<div style="background-image:url(pages/7.jpg)"></div>
-			<div style="background-image:url(pages/8.jpg)"></div>
-			<div style="background-image:url(pages/9.jpg)"></div>
-			<div style="background-image:url(pages/10.jpg)"></div>
-			<div style="background-image:url(pages/11.jpg)"></div>
-			<div style="background-image:url(pages/12.jpg)"></div>
-		</div>
-	</div>
-</div>
-
-
-
-
-<script type="text/javascript">
-
-function loadApp() {
-
-	// Create the flipbook
-
-	$('.flipbook').turn({
-			// Width
-
-			width:922,
-			
-			// Height
-
-			height:600,
-
-			// Elevation
-
-			elevation: 50,
-			
-			// Enable gradients
-
-			gradients: true,
-			
-			// Auto center this flipbook
-
-			autoCenter: true
-
-	});
-}
-
-// Load the HTML4 version if there's not CSS transform
-
-yepnope({
-	test : Modernizr.csstransforms,
-	yep: ['../lib/turn.js'],
-	nope: ['../lib/turn.html4.min.js'],
-	both: ['css/basic.css'],
-	complete: loadApp
-});
-
-</script>
-
-<script type="text/javascript" src="js/basic.js"></script>
 
 
 
