--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ a:visited {
 <div>
   <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow left"></i>Return to The Jaguardian</a></h2>
 </div>
-<a style="text-decoration:none; margin-right: 45px; float: right;" href="use">Instructions for use (if you're confused)</a>
+<a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
 
 
 <div style = "padding-top: 20px; padding-bottom: 350px;">
@@ -174,7 +174,7 @@ a:visited {
 </div>
 	
 <div>
-  <h2><a style="color: white; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages</a></h2>
+  <h2><a style="color: white; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages (or use the arrow keys)</a></h2>
 </div>
 
 
