--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ a:visited {
 </div>
 <a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
 
+<div style="position: relative; text-align: center">
+  <h2><a style="color: white; position: fixed; bottom: 0; width:100%;"> bla bla</h2>
+</div>
+
 
 <div style = "padding-top: 20px; padding-bottom: 350px;">
   <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
