--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ a:visited {
 </div>
 <a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
 
-<div style="position: relative; text-align: center">
-  <h2><a style="color: white; position: fixed; bottom: 0; width:100%;"> bla bla</h2>
+<div style="position: relative;">
+  <h2><a style="padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">Click or pinch corners to turn pages (or use the arrow keys)</h2>
 </div>
 
 
@@ -177,9 +177,6 @@ a:visited {
   <center><a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
 </div>
 	
-<div>
-  <h2><a style="color: white; text-decoration:none; float: left; margin-left: 45px; font-size: 15px;">Click or pinch corners to turn pages (or use the arrow keys)</a></h2>
-</div>
 
 
 <div class="flipbook-viewport">
