--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
+<link rel="shortcut icon" href="favicon.ico" />
+	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="../lib/extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../lib/extras/modernizr.2.5.3.min.js"></script>
 <link rel="stylesheet" src="https://use.typekit.net/dwd3cvg.css">
 <!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
 
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">	
 
 <style>
 
