--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ a:visited {
 
 
 <div style = "padding-top: 20px; padding-bottom: 350px;">
-  <center><a style="display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
+  <a style="display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazinee</a>
 </div>
 	
 
