--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ a:visited {
 </div>
 
 
-<div style = "display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-top: 20px; padding-bottom: 350px;">
-  <a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazineee</a>
+<div style = "color: white; font-family: ohno-blazeface; font-size: 50px; display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-top: 20px; padding-bottom: 350px;">
+  <a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazin</a>
 </div>
 	
 
