--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@ a:visited {
 </div>
 <a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
 
-<div style="position: relative;">
+<div style="display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; position: relative; padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">
   <h2><a style="padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">Click or pinch corners to turn pages (or use the arrow keys)</h2>
 </div>
 
 
 <div style = "color: white; font-family: ohno-blazeface; font-size: 50px; display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-top: 20px; padding-bottom: 350px;">
-  <a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazin</a>
+ <center><a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
 </div>
 	
 
