--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ a:visited {
 </div>
 
 
-<div style = "color: white; font-family: ohno-blazeface; font-size: 50px; display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-top: 20px; padding-bottom: 350px;">
- <center><a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a></center>
+<div style = "position: fixed; color: white; font-family: ohno-blazeface; font-size: 50px; display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-top: 20px; padding-bottom: 350px;">
+ <center><a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagaazine</a></center>
 </div>
 	
 
