--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ a:visited {
 <a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
 
 <div style="position: fixed; bottom: 0; width:100%;">
-  <h2><a style="padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">Click or pinch corners to turn pages (or use the arrow keys)</h2>
+  <h2><a style="padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">(You may need to zoom out &#x2318 + - ) Click or pinch corners to turn pages (or use the arrow keys)</h2>
 </div>
 
 
