--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
 <!--[if IE 9 ]>    <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-<link rel="shortcut icon" href="favicon.ico" />
-	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="text/javascript" src="../lib/extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../lib/extras/modernizr.2.5.3.min.js"></script>
 <link rel="stylesheet" src="https://use.typekit.net/dwd3cvg.css">
+<link rel="shortcut icon" href="favicon.ico" />
 <!-- ><script type="text/javascript" src="./lib/turn.min.js"></script> --> 
-
 
 <style>
 
-   .footer{ 
-       text-align: center;    
-       bottom: 20px; 
-       width: 100%;
-       color:white
-   }  
+html {
+	color: white;
+} 
 
-   /* Basic sample */
+ /* Basic sample */
 
 body{
 	overflow:hidden;
@@ -35,21 +30,18 @@ body{
 
 .flipbook-viewport{
 	overflow:hidden;
-	width:50%;
-	height:50%;
+	width:25%;
+	height:25%;
 }
 
 .flipbook-viewport .container{
 	position:absolute;
-	left:50%;
 	margin:auto;
 }
 
 .flipbook-viewport .flipbook{
 	width:922px;
 	height:600px;
-	left:-461px;
-	top:-300px;
 }
 
 .flipbook-viewport .page{
@@ -128,6 +120,7 @@ font-display:auto;font-style:normal;font-weight:500;
 .tk-beastly { font-family: "beastly",sans-serif; }
 .tk-ohno-blazeface { font-family: "ohno-blazeface",sans-serif; }
 
+
 a:active {
   color:white;
 }
@@ -146,7 +139,7 @@ a:visited {
   font-weight: bold;
 }
 
-.arrow {
+.arrow1 {
   border: solid white;
   border-width: 0 3px 3px 0;
   display: inline-block;
@@ -159,28 +152,46 @@ a:visited {
   -webkit-transform: rotate(135deg);
 }
 
+.arrow2 {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-left: 10px;
+}
+
+.right {
+  transform: rotate(310deg);
+  -webkit-transform: rotate(310deg);
+}
+
 </style>
 
 <body style = "font-family: nimbus-sans-extended;">
+
+<table style = "width: 100%;">
 	
-	
-<div>
-  <h2><a style="text-decoration:none; float: left; margin-left: 45px; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow left"></i>Return to The Jaguardian</a></h2>
-</div>
-<a style="text-decoration:none; margin-right: 45px; float: right;" href="#">Jagazine Archives (not available yet)</a>
+<tr>
+	<td style="text-align: center;">
+  <h2><a style="text-decoration:none; font-size: 15px;" href="https://TheJaguardian.org"><i class="arrow1 left"></i>Return to The Jaguardian</a></h2>
+  	</td>
 
-<div style="position: fixed; bottom: 0; width:100%;">
-  <h2><a style="padding-bottom: 20px; text-align: center; color: white; position: fixed; bottom: 0; width:100%;">(You may need to zoom out &#x2318 + - ) Click or pinch corners to turn pages (or use the arrow keys)</h2>
-</div>
+  	<td style="text-align: center;">
+<a style="color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a>
+	</td>
+	<td style="text-align: center;">
+  <a style="text-decoration:none; font-size: 15px;" href="https://TheJaguardian.org">Jagazine Archives<i class="arrow2 right"></i></a>
+
+  	</td>
+
+</tr>
+
+<tr>
+	<td style="text-align: center;">
 
 
-<div style = "color: white; font-family: ohno-blazeface; font-size: 50px; display: -webkit-flex; display: -mos-flex; display: flex; justify-content: center; padding-left: 10px; padding-top: 20px; padding-bottom: 350px;">
- <a style=color: white; font-family: ohno-blazeface; font-size: 50px;">The Jagazine</a>
-</div>
-	
 
-
-<div class="flipbook-viewport">
+<div class="flipbook-viewport" style="padding-top: 350px;" rowspan="3">
 	<div class="container">
 		<div class="flipbook">
 			<div style="background-image:url(pages/1.jpg)"></div>
@@ -200,7 +211,10 @@ a:visited {
 </div>
 
 
+	</td>
+</tr>
 
+</table>
 
 <script type="text/javascript">
 
@@ -210,7 +224,6 @@ function loadApp() {
 
 	$('.flipbook').turn({
 			// Width
-
 			width:900,
 			
 			// Height
@@ -226,8 +239,7 @@ function loadApp() {
 			gradients: true,
 			
 			// Auto center this flipbook
-
-			autoCenter: true
+			autoCenter: true,
 
 	});
 }
@@ -241,6 +253,8 @@ yepnope({
 	both: ['css/basic.css'],
 	complete: loadApp
 });
+
+
 
 </script>
 
